2005-11-15  Julien Puydt  <julien.puydt@free.fr>

	* configure.in: Changed the package name back to gnomemeeting (from
	gnomemeeting-snapshot).

2005-11-09  Damien Sandras  <dsandras@gnome.org>

	* src/tray.cpp: Fixed bug when there are successive calls to 
	update_has_message with a value of TRUE.

	* src/misc.cpp, src/misc.h: Added function to get the size of a 
	GMWindow from the configuration.

	* src/chat_window.cpp: Initialize the bottom pane distance to a 
	sane value.

2005-11-07  Damien Sandras  <dsandras@gnome.org>
	
	* src/chat_window.cpp: Made the statusbar not resizable.

	* src/tray.cpp: Only trigger one timeout callback at a time.

2005-11-06  Damien Sandras  <dsandras@gnome.org>

	* lib/stock-icons.c lib/stock-icons.h pixmaps/Makefile.am 
	pixmaps/message.png: Added message.png pixmap.

	* src/endpoint.cpp, src/endpoint.h: Update the flashing state of 
	the tray when receiving an H.323 message.

	* src/chat_window.cpp: Major code reorganisation, major bugfixes.

	* src/sipendpoint.cpp, src/sipendpoint.h: Update the tray when 
	receiving a message.

	* src/tray.cpp, src/tray.h: Added possibility to update the tray 
	icon with a flashing bubble when receiving a message.

	* src/main_window.cpp: Reset the tray flashing state when the 
	chat window is shown.

2005-11-05  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the Register and Unregister
	methods of the net.gnomemeeting.accounts interface.

	* src/dbus_component.cpp: Implemented the ResignalCallInfo method of
	the net.gnomemeeting.accounts interface.

	* src/dbus_component.cpp: Implemented the GetAccountsList method of the
	net.gnomemeeting.accounts interface.

	* src/dbus_component_stub.xml, src/dbus_component.cpp: Reworked the
	net.gnomemeeting.accounts interface so it looks more like the
	net.gnomemeeting.calls interface -- implementation still dummy.

	* src/dbus-helper-stub.xml, src/dbus-helper.cpp: Made the GetVersion