@@ -1,3 +1,9 @@
+2005-11-17  Julien Puydt  <julien.puydt@free.fr>
+
+	* src/dbus_component.cpp: Re-implemented the Register and Unregister
+	methods of the net.gnomemeeting.accounts interface using
+	endpoint->Register as discussed with Damien.
+
 2005-11-15  Julien Puydt  <julien.puydt@free.fr>
 
 	* configure.in: Changed the package name back to gnomemeeting (from
